# Automatic-Extraction-of-Lumped-RLC-Equivalents-in-Microstrip-Technology

./: README.md
TFG_v0/: Makefile  README.md  pyproject.toml  quickstart.ps1
TFG_v0/config/: base.yaml  env.local.yaml
TFG_v0/data/raw/: ejemplo.s2p  mcl1_337_cali1.s2p
TFG_v0/docs/: 00_resumen.md  10_metodologia.md  20_fixtures_y_calibracion.md  comandos_basicos.md
TFG_v0/reports/: ejemplo_rlc.csv  mcl1_337_cali1_rlc.csv  resumen_rlc.csv
TFG_v0/scripts/: batch.py  batch_fit.py  calibracion_v0.py  fit_rlc.py  generate_report.py  ingest_s2p.py  nanovna.py  nanovna_original.py  s2p_extraction.py
TFG_v0/src/tfg_v0/: cli.py  config.py  logging_setup.py  model.py
TFG_v0/src/tfg_v0.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TFG_v0/src/tfg_v0/io/: touchstone.py
TFG_v0/src/tfg_v0/modeling/: rlc_equiv.py  rlc_fit.py
TFG_v0/src/tfg_v0/plotting/: compare.py
TFG_v0/src/tfg_v0/rf/: calibration.py  features.py
TFG_v0/tests/: test_cli.py  test_rlc_fit.py  test_touchstone.py
